[project]
name = "ism-mcp"
version = "2.0.0"
description = "Agent-friendly query layer over the ASD Information Security Manual, served via MCP."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Sam Dudley", email = "dudley.samuel@gmail.com" }]
keywords = ["ism", "asd", "acsc", "essential-eight", "security", "compliance", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
]
dependencies = [
    "fastembed>=0.8.0",
    "mcp>=1.27.1",
    "numpy>=2.4.6",
]

[project.urls]
Homepage = "https://github.com/samueldudley/ism-mcp"
Repository = "https://github.com/samueldudley/ism-mcp"
Issues = "https://github.com/samueldudley/ism-mcp/issues"

[project.scripts]
ism-mcp = "ism_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ism_mcp"]

[dependency-groups]
dev = [
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.14",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--strict-markers", "--strict-config", "-ra", "-m", "not slow"]
markers = ["slow: integration tests that download the real fastembed model"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.14"
typeCheckingMode = "standard"
reportMissingTypeStubs = false
